--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
     "main": "server.js",
     "scripts": {
         "start": "node server.js",
+            "build": "echo 'No build required for backend' && exit 0",
         "server": "nodemon server.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
